--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -17,7 +17,7 @@
       </div>
       <table *ngIf="orders.length > 0">
         <thead>
-          <tr>
+          <tr *ngFor="let order of orders">
             <td></td>
             <td>PID</td>
             <td>Description</td>
@@ -29,18 +29,18 @@
         <tbody>
           <tr *ngFor="let order of orders; let i = index">
             <td><img class="item-image" [src]="order.image" alt="img"></td>
-            <td><input type="text" class="form-control" placeholder="PID"></td>
-            <td><input type="text" class="form-control" placeholder="Description"></td>
-            <td><input type="text" class="form-control" placeholder="Price"></td>
-            <td><input type="text" class="form-control" placeholder="Quantity"></td>
+            <td><input type="text"[(ngModel)]="order.pid" class="form-control" placeholder="PID"></td>
+            <td><input type="text"[(ngModel)]="order.description" class="form-control" placeholder="Description"></td>
+            <td><input type="text"[(ngModel)]="order.price" class="form-control" placeholder="Price"></td>
+            <td><input type="text"[(ngModel)]="order.quantity" class="form-control" placeholder="Quantity"></td>
             <td><button mat-raised-button color="primary" color="accent"><mat-icon>delete</mat-icon></button></td>
           </tr>
         </tbody>
       </table>
     </div>
     <div class="action-container">
-      <button mat-raised-button color="primary">Load Saved Items</button>
-      <button mat-raised-button color="primary">Clear</button>
+      <button mat-raised-button color="primary" (click)="displayorders()">Load Saved Items</button>
+      <button mat-raised-button color="primary"(click)="clear(i)">Clear</button>
       <button mat-raised-button color="primary">Submit</button>
     </div>
   </mat-card>
